# chess3d

./: .gitignore  CMakeLists.txt  CMakeSettings.template.json  README.md  chess3d.cpp  chess3d.h  chess3d.hpp  chessboard_demo.blend  chessboard_demo.blend1  console.cpp  console.hpp  file_handler.cpp  file_handler.hpp  logic.cpp  logic.hpp  pieces_master.blend  test_notation.txt  test_position.txt  test_promotion.txt
chess_mdl/: piece_base.blend  piece_base.blend1  piece_bishop.blend  piece_king.blend  piece_knight.blend  piece_pawn.blend  piece_pawn.blend1  piece_queen.blend  piece_rook.blend  piece_rook.blend1
mdl/: demo_piece.mtl  pieces_master.blend  pieces_master.blend1
positions/: example.pgn  test_blank.txt  test_castling.txt  test_checkmate.txt  test_notation.txt
src/: chess3d.cpp  chess3d.hpp  console.cpp  console.hpp  file_handler.cpp  file_handler.hpp  logic.cpp  logic.hpp  renderer.cpp  renderer.hpp
src/opengl/: glad.c
test/: main.cpp  test_console.cpp  test_file_handler.cpp  test_logic.cpp  test_move_detecton.cpp  test_special_cases.cpp
test_positions/: test_castling.txt  test_ep.txt  test_notation.txt  test_position.txt  test_stalemate.txt
